--- a/creative-design-studio/package.json
+++ b/creative-design-studio/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-marquee-slider": "^1.1.5",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13"
   },
